refs #80 - done